# ollama_church

./: Cargo.toml  README.md  captions.srt
src/: main.rs
