[package]
name = "ollama_church"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
ollama-rs = { version = "0.2.3", features = ["tokio", "stream", "scraper", "calc", "tokio-stream", "tool-implementations", "macros"] }
schemars = "0.8.21"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
